examples/diagnostics_demos/errors/empty_match_error.flx
// Triggers E030 (EMPTY MATCH)
let x = match 1 { };
print(x);
